--- a/style.css
+++ b/style.css
@@ -2506,3 +2506,28 @@ select.mobile-device {
     padding-left: 25px;
     margin-bottom: 10px;
 }
+
+
+.stima_container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.box {
+    width: 100%;
+    display: flex;
+    transition: transform 1s ease-in-out;
+}
+
+.slider-image {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+.stima_container:hover .box {
+    animation-play-state: paused; /* 停止動畫 */
+}
+  
