--- a/style.css
+++ b/style.css
@@ -628,8 +628,6 @@ xclip
 }
 
 
-
-
 .right-box-pro{
 	position: relative;
 	-webkit-box-shadow: 0px 0px 30px -4px rgba(0, 0, 0, 0.3);
@@ -649,8 +647,6 @@ xclip
     right: -20px;
     z-index: 0;
 }
-
-
 
 .services-inner-box{
 	padding: 15px;
@@ -1185,41 +1181,33 @@ xclip
 }
 
 .service-widget p {
+    font-family: "Times New Roman", Times, serif;
     margin-bottom: 0;
     padding-bottom: 0;
 }
 
-.message-box h4 {
-    text-transform: uppercase;
-    padding: 0;
-    margin: 0 0 5px;
-    font-weight: 600;
-    letter-spacing: 0.5px;
-    font-size: 15px;
-    color: #999;
-}
 
 .message-box h2 {
-    font-size: 38px;
+    font-family: "Times New Roman", Times, serif;
+    font-size: 28px;
     font-weight: 300;
     padding: 0 0 10px;
     margin: 0px;
     line-height: 62px;
     margin-top: 0;
+    margin-bottom: 15px;
     text-transform: none;
 }
 
 .message-box p {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    font-family: "Times New Roman", Times, serif;
+    font-size: 18px;
+    
 }
 
-.message-box .lead {
-    padding-top: 10px;
-	font-size: 16px;
-	font-style: italic;
-	color: #999;
-	padding-bottom: 10px;
-	padding-left: 15px;
+.message-box span {
+    text-decoration: underline;
 }
 
 .post-media {
@@ -2523,4 +2511,60 @@ select.mobile-device {
 .stima_container:hover .box {
     animation-play-state: paused;
 }
+
+.contact-title {
+    text-align: center; 
+}
   
+.social-icons {
+    padding-top: 1rem;
+    list-style: none;
+    margin: 0;
+}
+
+.social-item {
+    margin: 0 10px; 
+}
+
+.icon-md {
+    font-size: 24px; 
+}
+
+.social-link {
+    font-size: 24px;
+    color: #000; 
+    text-decoration: none;
+}
+
+.social-link:hover {
+    color: #007bff; 
+}
+
+.section-heading h2 {
+    font-family: "Times New Roman", Times, serif;
+    font-weight: bold;
+    font-size: 38px;
+    line-height: 6px;
+    margin: -25px 0 20px;
+    padding: 10px;
+    text-transform: none;
+    position: relative; 
+}
+
+.section-heading h2::after {
+    content: "";
+    display: block;
+    width: 75%; 
+    height: 1px; 
+    background-color: #e5ebf2; 
+    position: absolute;
+    bottom: 0; 
+    left: 50%; 
+    transform: translateX(-50%); 
+}
+
+.message-box .thick-line {
+    border: none;
+    height: 1px; 
+    background-color: #e5ebf2;
+}
