--- a/style.css
+++ b/style.css
@@ -2568,3 +2568,11 @@ select.mobile-device {
     height: 1px; 
     background-color: #e5ebf2;
 }
+
+@font-face {
+    font-family: "Times New Roman Custom";  /* 自定義字型名稱 */
+    src: url("path/to/TimesNewRoman.woff") format("woff"),  /* 字型檔案位置 */
+         url("path/to/TimesNewRoman.woff2") format("woff2");  /* 可以加載更輕量的woff2格式 */
+    font-weight: normal;  /* 字型粗細 */
+    font-style: normal;   /* 字型樣式 */
+}
